--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
-    "name": "TextBelt"
-  , "repository": {
-        "type": "git"
-      , "url": "git@github.com:typpo/textbelt.git"
-    }
-  , "dependencies": {
-      "express": "~3.5.1"
-      , "authbox": "^0.9.3"
-      , "jade": "~0.14.2"
-      , "mixpanel": "~0.0.19"
-      , "nodemailer": "~0.6.1"
-      , "redis-url": "~0.2.0"
-      , "underscore": "~1.6.0"
-    }
-  , "devDependencies": {
-    }
-  , "main": "app"
-  , "engines": { "node": ">= 0.4.0" }
-  , "version": "0.0.2"
+  "name": "TextBelt",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:typpo/textbelt.git"
+  },
+  "dependencies": {
+    "authbox-common": "^0.4.1",
+    "express": "~3.5.1",
+    "jade": "~0.14.2",
+    "mixpanel": "~0.0.19",
+    "nodemailer": "~0.6.1",
+    "redis-url": "~0.2.0",
+    "request": "^2.55.0",
+    "sha256": "^0.2.0",
+    "underscore": "~1.6.0",
+    "uuid": "^2.0.1"
+  },
+  "devDependencies": {},
+  "main": "app",
+  "engines": {
+    "node": ">= 0.4.0"
+  },
+  "version": "0.0.2"
 }
